# high-performance-scientific-computing-in-cxx

./: README.md
Book/chapter1/examples/: CMakeLists.txt  hello.cc  hello2.cc  hello2b.cc  hello3.cc  hello4.cc  ifthenelse.cc  lambda0.cc  lambda1.cc  math_functions_cmdln.cc  ns3.cc  ns4.cc  outside.cc  quadratic0.cc  switchdemo.cc  vardecl.cc
Book/chapter1/mine/: G_potential.cc  a.out  blockscope.cc  control_flow.cc  linit.cc  math_functions.cc  ns1.cc  ns2.cc  pow.cc  quadratic1.cc  rangefor.cc  tlit.cc  whilewithbreak.cc
Book/chapter2/examples/: array_or_pointer.cc  asan0.cc  binform.cc  caesar.cc  cleanup.cc  copyptr.cc  copyptr1.cc  ignored.cc  iota.cc  macropi.c  overload0.cc  sort_various.cc  temp0.cc  trig_forloop.cc  trig_numpy.py  trig_valarray.cc  trig_views2.cc  truncation0.cc  views_and_span.cc
Book/chapter2/solutions/: caesar.cc
code/bash/: aliases.sh  download_missing.sh  pathutils.sh
code/include/: CountingIterator.hh  FileAsLines.hh  Vbose.hh  binform17.hh  cxx20format  cxx20ranges  print_tuple.hh  range_output.hh  timeit.hh
day1/: .overload_w_concepts.cc.un~
day1/examples/: advent.cc  bit0.cc  concept_type.cc  conceptint.cc  conceptint1.cc  cxpr_algo0.cc  dangling0.cc  dangling1.cc  desig.cc  desig2.cc  feb.cc  format1.cc  garbled.cc  gcd_w_concepts.cc  generic_func1.cc  generic_func2.cc  generic_func3.cc  generic_func4.cc  gerund.cc  immediate.cc  intcmp.cc  iota.cc  mysqrt_expected.cc  nontempconstr.cc  overload_w_concepts.cc  print_ranges.cc  ranges0.cc  saxpy.ccm  saxpy.pcm  saxpy_1.cc  saxpy_2.cc  saxpy_3b.cc  saxpy_3c.cc  saxpy_4.cc  saxpy_5b.cc  saxpy_7.cc  syncstream.cc  syncstream.mpi  syncstream_mpi.cc  trig_views.cc  (+1 more)
day1/examples/TSP/: CMakeLists.txt  TSP-Cities.cc  TSP-Cities.ixx  TSP-Itinerary.cc  TSP-Itinerary.ixx  TSP.cc  main.cc
day1/examples/concepts/: concept_type.cc  conceptint1.cc  cpp_sum_2.cc  gcd_w_concepts.cc  generic_func2.cc  nontempconstr.cc  overload_w_concepts.cc
day1/examples/demo_saxpy/: saxpy_0.cc  saxpy_3.cc  saxpy_5.cc  saxpy_6.cc  saxpy_6b.cc  saxpy_6c.cc  saxpy_8.cc  saxpy_9.cc
day1/examples/modules/: advent.cc  feb.cc  hello_m.cc
day1/examples/modules/2_any/: CMakeLists.txt  Circle.ixx  Point.ixx  Polygon.ixx  Triangle.ixx  build_with_clang.sh  build_with_gcc.sh  clean.sh  main.cc
day1/examples/modules/2_any/with_header_files/: CMakeLists.txt  Circle.cc  Circle.hh  Point.cc  Point.hh  Polygon.hh  Triangle.cc  Triangle.hh  main.cc
day1/examples/modules/2_any/with_modules/: CMakeLists.txt  Circle.ixx  Point.ixx  Polygon.ixx  Triangle.ixx  build_with_clang.sh  build_with_gcc.sh  main.cc
day1/examples/modules/saxpy/: CMakeLists.txt  README.md  cleanup.sh  usesaxpy.cc
day1/examples/modules/saxpy/with_header_files/: README.md  saxpy.hh  usesaxpy.cc
day1/examples/modules/saxpy/with_modules/: README.md  cleanup.sh  saxpy.ixx
day1/examples/ranges/: adjacent.cc  dangling0.cc  dangling1.cc  enumerate.cc  gerund.cc  iota.cc  ranges0.cc  ranges_to.cc  seqops_range.cc  trig_views.cc  trig_views2.cc  views_and_span.cc  zip.cc  zip1.cc  zip_transform.cc
day1/examples/spans/: main.cc  spanfunc.cc  spanfunc.hh
day2/examples/: CMakeLists.txt  align0.cc  align1.cc  align2.cc  alignas.cc  alignof.cc  alloc_cost.cc  branch_prediction.cc  branch_prediction1.cc  crtp1.cc  crtp2.cc  crtp3.cc  crtp4.cc  every_nth.cc  false_sharing.cc  floating_fun.cc  ilp.cc  nonuniform.cc  sfinae0.cc  shim1.cc  stdarray.cc  stdfloat.cc  tag_dispatch.cc  transpose.cc  traverse0.cc
day2/examples/SIMD/diy/: CMakeLists.txt  QuadDouble.hh  README  README.md  daxpy.cc  daxpy1.cc  exvol.cc  sprod.cc
day2/examples/SIMD/stdx_simd/: CMakeLists.txt  README.md  daxpy.cc  exvol.cc  sprod.cc  stdx0.cc
day2/examples/SIMD/vcl/: daxpy.cc  exvol.cc  sprod.cc
day2/examples/SIMD/xsimd/: caxpy.cc  daxpy.cc  exvol.cc  exvol0.cc  exvol1.cc  sprod.cc  x0.cc
day2/examples/apishimming/: CMakeLists.txt  Machinery.hh  README  algo.hh  main.cc
day2/examples/apishimming2/: README
day2/examples/apishimming2/client/: CMakeLists.txt  main.cc
day2/examples/apishimming2/provider/: Machinery.ccm  MyGreatProduct.ccm  algo.ccm  build.sh
day2/examples/array2d/: ar2d_cxx23.cc  array2d.hh  vecvec.cc
day2/examples/assembly/: CMakeLists.txt  axpy.cc  class.cc  class2.cc  constref.cc  get_alignment.cc  series_sum.cc  tuple_asm.cc
day2/examples/notebooks/: grow_vector.ipynb  perfect_forwarding.ipynb  ref_qual_members.ipynb
day2/examples/xtmp0/: .xtmp_vec1.hh.un~  CMakeLists.txt  main.cc  naive_vec.hh  xtmp_vec0.hh  xtmp_vec1.hh  xtmp_vec1.hh~  xtmp_vec1b.hh
day3/examples/: onespace.cc
day3/examples/MatMul/: AtomMatrix.hh  CMakeLists.txt  CountingIterator.hh  Matrix.hh  MatrixView.hh  Matrix_blocks.hh  Matrix_less_allocs.hh  Matrix_naive.hh  Matrix_ni.hh  Matrix_recursive_blocks.hh  Matrix_xtmp.hh  SessionMatrix.ipynb  cache_props.hh  matmul.cc  simd_wrapper.hh
day3/examples/PCA/: PCA
day3/examples/eigen/: CMakeLists.txt  eigen0.cc  eigen1.cc  eigen1b.cc  matmul.cc  mattrans.cc
day3/examples/pstl/: CMakeLists.txt  birthday_problem.cc  inner_product.cc  mandelbrot0.cc  transform_reduce.cc  transform_reduce1.cc  transform_reduce2.cc
day3/examples/tbb/: CMakeLists.txt  dasxpcy.cc  dasxpcy1.cc  dasxpcy_raw_arrays.cc  dasxpcy_raw_arrays0.cc  nparticle.cc  nparticle_upper_triangle1.cc  parallel_invoke.cc  tbbreduce0.cc  tbbreduce1.cc
day3/examples/xtensor/: CMakeLists.txt  README  xt0.cc  xt1.cc  xt2.cc
day4/examples/: README  birthday_problem.cc  mandelbrot1.cc  mandelbrot_cpu.cc  mandelbrot_gpu.cu  matmul_trivial.cu  matmul_trivial2.cu  matmul_trivial3.cu  matmuld.cu  matmuls.cu  saxpy0.cu  stdpardemo0.cc  stdpardemo1.cc  thrust0.cu  thrust1.cu  thrust_usm.cu  transform_reduce.cu
day4/examples/TSP-pstl/: CMakeLists.txt  README.md  TSP-Itinerary.cc  main.cc
day4/examples/TSP-stdpar/: CMakeLists.txt  README  TSP.cc  TSP_all.cc
day4/examples/TSP-tbb/: CMakeLists.txt  TSP-Itinerary.cc  main.cc
test_your_setup/: README.md  hello.cc  hello_c++20.cc  hello_c++20_m.cc  hello_c++23.cc  hello_c++23_m.cc  psort1.cc
(+18 files in other folders)
