cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project(examples CXX)

set(progs axpy class2 class constref tuple_asm)
foreach(prog ${progs})
add_executable(${prog} ${prog}.cc)
endforeach()
