cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project(examples CXX)

find_package(TBB REQUIRED)

add_executable(stdx0 stdx0.cc)
add_executable(daxpy daxpy.cc)
add_executable(sprod sprod.cc)
add_executable(exvol exvol.cc)
set(SIMD_STRATEGY "NONE" CACHE STRING "SIMD alternative. (NONE, SEQ_POLICY, UNSEQ_POLICY, OMP_SIMD, STDX_SIMD)")
set_property(CACHE SIMD_STRATEGY PROPERTY STRINGS NONE SEQ_POLICY UNSEQ_POLICY OMP_SIMD STDX_SIMD)
option(USE_ALIGNED_VECTORS "Use an aligned allocator for heap allocation of vectors." OFF)
target_compile_definitions(exvol PUBLIC -DUSE_${SIMD_STRATEGY})
if (USE_ALIGNED_VECTORS OR SEQ_POLICY OR UNSEQ_POLICY)
	target_link_libraries(exvol PUBLIC TBB::tbb TBB::tbbmalloc)
endif()
if (("${SIMD_STRATEGY}" STREQUAL "SEQ_POLICY" OR "${SIMD_STRATEGY}" STREQUAL "UNSEQ_POLICY")
	AND ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang"))
	target_compile_options(exvol PUBLIC -stdlib=libc++ -fexperimental-library)
	target_link_libraries(exvol PUBLIC -stdlib=libc++ -fexperimental-library)
endif()

